opam-version: "2.0"
version: "2023.04.15~dev"
maintainer: "taramana@microsoft.com"
authors: "Aseem Rastogi <aseemr@microsoft.com>,Guido Martinez <guimartinez@microsoft.com>,Nik Swamy <nswamy@microsoft.com>,Tahina Ramananandro <taramana@microsoft.com>"
homepage: "http://fstar-lang.org"
license: "Apache-2.0"
depends: [
  "ocaml"
  "fstar" {>= "2023.04.15~dev"}
]
# require modern GNU make (brew package 'make') on mac
depexts: ["coreutils" "make"] {os = "macos" & os-distribution = "homebrew"}
build: [
   # Makefile requires modern make - build with gmake on mac
  ["gmake" "-j" jobs "ADMIT=1"] { os = "macos" }
  [make "-j" jobs "ADMIT=1"] { os != "macos" }
]
install: [
  ["gmake" "PREFIX=%{prefix}%" "install"] { os = "macos" }
  [make "PREFIX=%{prefix}%" "install"] { os != "macos" }
]
dev-repo: "git://github.com/FStarLang/pulse"
bug-reports: "https://github.com/FStarLang/pulse/issues"
synopsis: "The Pulse separation logic DSL for F*"
