(include_subdirs unqualified)
(library
 (name pulse)
 (public_name pulse)
 (libraries
    batteries
    fstar_plugin_lib
    fstar-guts
    menhirLib
 )
 (modes native)
 (wrapped false)
 (flags (:standard -w -A))
)

(menhir
 (modules pulseparser FStarC_Parser_Parse)
 (merge_into Pulse_FStar_Parser))
